src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Year(TODAY()) -  Year(DOB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra__c</fullName>
        <label>Extra</label>
        <length>188</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HaveWhicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HaveWhicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WifeName__c</fullName>
        <label>WifeName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <label>class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fees__c</fullName>
        <label>fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sex__c</fullName>
        <label>sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>only_female</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>sex__c</field>
            <operation>equals</operation>
            <value>Female</value>
        </filters>
        <label>only female</label>
    </listViews>
    <listViews>
        <fullName>only_male_student</fullName>
        <columns>NAME</columns>
        <columns>Age__c</columns>
        <columns>DOB__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>sex__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <label>only male student</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dob_check</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c &gt;= TODAY()</errorConditionFormula>
        <errorMessage>DOB can&apos;t be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone_format</fullName>
        <active>true</active>
        <errorConditionFormula>phone__c &lt; 40000</errorConditionFormula>
        <errorMessage>account Billing Zip/Postal Code is in 99999 or 99999-9999 format if Billing Country is USA or US</errorMessage>
    </validationRules>
</CustomObject>